--- a/rag_server/requirements.txt
+++ b/rag_server/requirements.txt
@@ -6,3 +6,8 @@ sentence-transformers
 google-generativeai
 python-dotenv
 requests
+langchain
+langchain-community
+langchain-google-genai
+langchain-chroma
+langchain-huggingface
